nazwy i kolory ideologii

--- a/localisation/polish/replace/vanilla_parties_l_polish.yml
+++ b/localisation/polish/replace/vanilla_parties_l_polish.yml
@@ -1,4 +1,90 @@
 ﻿l_polish:
+ communism:0 "Marksizm-Leninizm"
+ communism_noun:0 "Marksizm-Leninizm"
+ democratic:0 "Konserwatyzm"
+ democratic_noun:0 "Konserwatyzm"
+ fascism:0 "Faszyzm"
+ fascism_noun:0 "Faszyzm"
+ fascism_desc:0 "Reżim totalitarny"
+ communism_desc:0 "Reżim totalitarny"
+ democratic_desc:0 "Reżim demokratyczny"
+ neutrality:0 "Nacjonalizm"
+ neutrality_noun:0 "Nacjonalizm"
+ neutrality_desc:0 "Reżim autorytarny"
+ monarchism:0 "Monarchizm"
+ monarchism_noun:0 "Monarchizm"
+ monarchism_desc:0 "Reżim autorytarny"
+ socialism:0 "Socjalizm"
+ socialism_noun:0 "Socjalizm"
+ socialism_desc:0 "Reżim autorytarny"
+ nazbol:0 "Narodowy Bolszewizm"
+ nazbol_noun:0 "Narodowy Bolszewizm"
+ nazbol_desc:0 "Reżim totalitarny"
+ stalinism:0 "Stalinizm"
+ stalinism_noun:0 "Stalinizm"
+ stalinism_desc:0 "Reżim totalitarny"
+ trockizm:0 "Trockizm"
+ trockizm_noun:0 "Trockizm"
+ trockizm_desc:0 "???"
+ bolshevizm:0 "Bolszewizm"
+ bolshevizm_noun:0 "Bolszewizm"
+ bolshevizm_desc:0 "???"
+ maoism:0 "Maoizm"
+ maoism_noun:0 "Maoizm"
+ maoism_desc:0 "???"
+ nazism:0 "Nazizm"
+ nazism_noun:0 "Nazizm"
+ nazism_desc:0 "Reżim totalitarny"
+ national_conservatism:0 "Narodowy Konserwatyzm"
+ national_conservatism_noun:0 "Narodowy Konserwatyzm"
+ national_conservatism_desc:0 "???"
+ national_liberalism:0 "Narodowy Libralizm"
+ national_liberalism_noun:0 "Narodowy Libralizm"
+ national_liberalism_desc:0 "Reżim demokratyczny"
+ socialliberalism:0 "Socjalliberalizm"
+ socialliberalism_noun:0 "Socjalliberalizm"
+ socialliberalism_desc:0 "Reżim demokratyczny"
+ anarchocommunism:0 "Anarchokomunizm"
+ anarchocommunism_noun:0 "Anarchokomunizm"
+ anarchocommunism_desc:0 "Republika Radna"
+ anarchosyndycalism:0 "Anarchosyndykalizm"
+ anarchosyndycalism_noun:0 "Anarchosyndykalizm"
+ anarchosyndycalism_desc:0 "Republika Radna"
+ socdem:0 "Socjaldemokracja"
+ socdem_noun:0 "Socjaldemokracja"
+ socdem_desc:0 "Reżim demokratyczny"
+ demsoc:0 "Demokratyczny Socjalizm"
+ demsoc_noun:0 "Demokratyczny Socjalizm"
+ demsoc_desc:0 "Reżim demokratyczny"
+ anarchoprimitivism:0 "Anarchoprymitywizm"
+ anarchoprimitivism_noun:0 "Anarchoprymitywizm"
+ anarchoprimitivism_desc:0 "Republika Radna"
+ progressivism:0 "Progresywizm"
+ progressivism_noun:0 "Progresywizm"
+ progressivism_desc:0 "Reżim demokratyczny"
+ liberalism:0 "Libralizm"
+ liberalism_noun:0 "Libralizm"
+ liberalism_desc:0 "Reżim demokratyczny"
+ libertarianism:0 "Libertarianizm"
+ libertarianism_noun:0 "Libertarianizm"
+ libertarianism_desc:0 "???"
+ anarchocapitalism:0 "Anarchokapitalizm"
+ anarchocapitalism_noun:0 "Anarchokapitalizm"
+ anarchocapitalism_desc:0 "Anarchia"
+ korwinizm:0 "Korwinizm"
+ korwinizm_noun:0 "Korwinizm"
+ korwinizm_desc:0 "???"
+ neoliberalism:0 "Neoliberalizm"
+ neoliberalism_noun:0 "Neoliberalizm"
+ neoliberalism_desc:0 "Reżim demokratyczny"
+ minarchism:0 "Minarchizm"
+ minarchism_noun:0 "Minarchizm"
+ minarchism_desc:0 "Minimalny Rząd"
+ market_liberalism:0 "Libralizm Rynkowy"
+ market_liberalism_noun:0 "Libralizm Rynkowy"
+ market_liberalism_desc:0 "???"
+ 
+######
  AUS_fascism_party:1 "Vaterländische Front"
  AUS_neutrality_party:1 "KTVP"
  AUS_neutrality_party_long:1 "Kaisertreue Volkspartei"
