--- a/localisation/polish/replace/vanilla_parties_l_polish.yml
+++ b/localisation/polish/replace/vanilla_parties_l_polish.yml
@@ -123,6 +123,21 @@
  SWE_liberalism_party:0 "Centre Party"
  SWE_progressivism_party:0 "Green Party"
 
+###NORWAY
+
+ NOR_socdem_party:0 "Labour Party"
+ NOR_neutrality_party:0 "Centre Party"
+ NOR_democratic_party:0 "Conservative Party"
+ NOR_nationalliberalism_party:0 "Progress Party"
+ NOR_demsoc_party:0 "Socialist Left Party"
+ NOR_communism_party:0 "Red Party"
+ NOR_liberalism_party:0 "Liberal Party"
+ NOR_progressivism_party:0 "Green Party"
+
+###FINLAND
+
+ 
+
  communism:0 "Marksizm-Leninizm"
  communism_noun:0 "Marksizm-Leninizm"
  democratic:0 "Konserwatyzm"
