--- a/localisation/polish/countries_l_polish.yml
+++ b/localisation/polish/countries_l_polish.yml
@@ -72,8 +72,8 @@
 
    #NEUTRALITY
 
-    ALB_neutrality:0 "Albański Królestwo"
-    ALB_neutrality_DEF:0 "Albański Królestwo"
+    ALB_neutrality:0 "Albańskie Królestwo"
+    ALB_neutrality_DEF:0 "Albańskie Królestwo"
     ALB_neutrality_ADJ:0 "Albański"
 
    #TAG
