--- a/localisation/polish/2137_traits_l_polish.yml
+++ b/localisation/polish/2137_traits_l_polish.yml
@@ -3,3 +3,8 @@
  POL_Plaskoziemca :0 "Płaskoziemca"
  POL_Uznany_Plaskoziemca :0 "Uznany płaskoziemca"
  POL_Anty_PiS:0 'Anty-PiS"
+ POL_Charyzmatyczny_Komunista:0 "Charyzmatyczny komunista"
+ POL_Uznany_Prezydent:0 "Uznany prezydent"
+ POL_Lider_Opozycji:0 "Lider opozycji"
+ POL_Nagonka_Anty_Polaka:0 "Nagonka anty-Polaka"
+ POL_Przyjaciel_Niemiec:0 "Przyjaciel Niemiec"
